资源路径修正

--- a/design/设计原则-丙.md
+++ b/design/设计原则-丙.md
@@ -2,7 +2,7 @@
 
 ## 设计模式 - 丙篇
 
-  <img src="../resource/design_header.png" width="500" />
+  <img src="./../resource/design_header.png" width="500" />
 
 </div>
 
@@ -356,7 +356,7 @@ teacher
 
 <div align=center>
 
-![](../resource/design_intermediary.png)
+![](./../resource/design_intermediary.png)
 
 </div>
 
