--- a/design/设计原则-乙.md
+++ b/design/设计原则-乙.md
@@ -2,7 +2,7 @@
 
 ## 设计模式 - 乙篇
 
-  <img src="../resource/design_header.png" width="500" />
+  <img src="./../resource/design_header.png" width="500" />
 
 </div>
 
@@ -434,7 +434,7 @@ MacroCommand.execute(); // time age
 
 <div align=center>
 
-![](../resource/design_combination.png)
+![](./../resource/design_combination.png)
 
 </div>
 
