--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -2,7 +2,7 @@
 
 ## 设计模式 - 甲篇
 
-  <img src="../resource/design_header.png" width="500" />
+  <img src="./../resource/design_header.png" width="500" />
 
 </div>
 
