--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -2,7 +2,7 @@
 
 ## 前端基础 - 乙篇
 
-  <img src="../resource/interview_header.png" width="500" />
+  <img src="./../resource/interview_header.png" width="500" />
 
 </div>
 
