--- a/interview/前端常识-甲.md
+++ b/interview/前端常识-甲.md
@@ -2,7 +2,7 @@
 
 ## 前端常识 - 甲篇
 
-  <img src="../resource/interview_header.png" width="500" />
+  <img src="./../resource/interview_header.png" width="500" />
 
 </div>
 
