设计模式：增加重要程度、难度星级和命名建议

--- a/design/设计原则-丁.md
+++ b/design/设计原则-丁.md
@@ -10,6 +10,10 @@
 
 #### 装饰者模式
 
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐  
+> 命名建议：xxxDecorator，xxx（具体实现）
+
 ##### 1 定义
 
 装饰者模式（Decorator Pattern）允许向一个现有的对象添加新的功能，同时又不改变其结构。这种类型的设计模式属于结构型模式，它是作为现有的类的一个包装。
@@ -97,6 +101,10 @@ skillDecorator(); // 跑步 音乐 数学
 
 #### 状态模式
 
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐⭐⭐  
+> 命名建议：xxxState
+
 ##### 1 定义
 
 状态模式 (State) 允许一个对象在其内部状态改变的时候改变它的行为，对象看起来似乎修改了它的类。其实就是用一个对象或者数组记录一组状态，每个状态对应一个实现，实现的时候根据状态挨个去运行实现。
@@ -169,6 +177,10 @@ new SuperMarry()
 
 #### 适配器模式
 
+> 重要程度：⭐⭐⭐⭐  
+> 难度：⭐⭐⭐  
+> 命名建议：xxxAdapter，xxxWraper
+
 ##### 1 定义
 
 适配器模式 (Adapter) 将一个类的接口转换成客户希望的另外一个接口，使得原本由于 [接口](https://www.tslang.cn/docs/handbook/interfaces.html) 不兼容而不能一起工作的那些类可以一起工作。
@@ -222,6 +234,10 @@ renderData(arrayAdapter(data)); // A B C
 > 适配器模式本质上是一个亡羊补牢的模式，它解决的是现存的两个接口之间不兼容的问题，你不应该在软件的初期开发阶段就使用该模式；如果在设计之初我们就能够统筹的规划好接口的一致性，那么适配器就应该尽量减少使用。
 
 #### 外观模式
+
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐  
+> 命名建议：xxx（具体实现）
 
 ##### 1 定义
 
