--- a/design/设计原则-丙.md
+++ b/design/设计原则-丙.md
@@ -10,6 +10,10 @@
 
 #### 模块方法模式
 
+> 重要程度：⭐⭐  
+> 难度：⭐  
+> 命名建议：xxx（具体实现）
+
 ##### 1 定义
 
 模板方法模式由两部分结构组成：`抽象父类` 和 `实现子类`
@@ -111,6 +115,10 @@ marathon.init();
 ```
 
 #### 享元模式
+
+重要程度：⭐  
+难度：⭐⭐  
+命名建议：xxx（具体实现）
 
 ##### 1 定义
 
@@ -224,6 +232,10 @@ for (let i = 1; i < 51; i++) {
 ```
 
 #### 职责链模式
+
+> 重要程度：⭐⭐⭐⭐  
+> 难度：⭐⭐⭐  
+> 命名建议：xxxBridge，xxx（具体实现）
 
 ##### 1 定义
 
@@ -348,6 +360,10 @@ teacher
 
 #### 中介者模式
 
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐⭐⭐⭐  
+> 命名建议：xxxCotroller，xxxMiddleWare，xxx(具体实现)
+
 ##### 1 定义
 
 所有的相关对象都通过`中介者`对象来通信，而不是互相引用，所以当一个对象发生改变时，只需要通知`中介者`对象即可
@@ -394,7 +410,7 @@ var B = {
     this.score = score;
 
     // 通过中介者获取
-    rankMediator(B);
+    rankMiddleWare(B);
   }
 };
 
@@ -404,12 +420,12 @@ var C = {
   changeTo: function(score) {
     this.score = score;
 
-    rankMediator(C);
+    rankMiddleWare(C);
   }
 };
 
 // 中介者，计算排名
-function rankMediator(person) {
+function rankMiddleWare(person) {
   var scores = [A.score, B.score, C.score].sort(function(a, b) {
     return a < b;
   });
