--- a/design/设计原则-乙.md
+++ b/design/设计原则-乙.md
@@ -10,6 +10,10 @@
 
 #### 迭代器模式
 
+重要程度：⭐  
+难度：⭐  
+命名建议：xxx（具体实现）
+
 ##### 1 定义
 
 迭代器模式是指提供一种方法顺序访问一个聚合对象中的各个元素，而又不需要暴露该对象的内部表示
@@ -72,6 +76,10 @@ each({ a: 1, b: 2 }, function(index, value) {
 ```
 
 #### 发布-订阅模式
+
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐⭐⭐  
+> 命名建议：xxxObserver，xxxEventHandler
 
 ##### 1 定义
 
@@ -227,6 +235,10 @@ observer.publish("job", ["前端", "后端", "测试"]); // 输出B的岗位
     弱化了对象之间的联系，复杂情况下可能导致程序难以跟踪维护和理解
 
 #### 命令模式
+
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐⭐⭐  
+> 命名建议：xxxCommand
 
 ##### 1 定义
 
@@ -424,9 +436,13 @@ MacroCommand.execute(); // time age
 
 #### 组合模式
 
+> 重要程度：⭐⭐⭐⭐  
+> 难度：⭐⭐  
+> 命名建议：xxxComponent、xxx（具体实现）
+
 ##### 1 定义
 
-是用小的 <abbr title="叶子节点">子对象</abbr> 来构建更大的对象，而这些小的子对象本身也许是由更小的 <abbr title="叶子节点">孙对象</abbr> 构成的。
+是用小的 <abbr title="叶子节点">子对象</abbr> 来构建更大的对象，而这些小的子对象本身也许是由更小的 <abbr title="叶子节点">孙对象</abbr> 构成的。这个抽象定义一般三个部分组成，组件的基本信息，`Add`方法，`Remove` 方法；
 
 ##### 2 核心
 
@@ -448,14 +464,14 @@ MacroCommand.execute(); // time age
 
 ```javascript
 // 文件夹 组合对象
-function Folder(name) {
+function FolderComponent(name) {
   this.name = name;
   this.parent = null;
   this.files = [];
 }
 
-Folder.prototype = {
-  constructor: Folder,
+FolderComponent.prototype = {
+  constructor: FolderComponent,
 
   add: function(file) {
     file.parent = this;
@@ -485,16 +501,20 @@ Folder.prototype = {
 };
 
 // 文件 叶对象
-function File(name) {
+function FileComponent(name) {
   this.name = name;
   this.parent = null;
 }
 
-File.prototype = {
-  constructor: File,
+FileComponent.prototype = {
+  constructor: FileComponent,
 
   add: function() {
     console.log("文件里面不能添加文件");
+  },
+
+  remove: function() {
+    console.log("文件里面不能删除文件");
   },
 
   scan: function() {
@@ -512,20 +532,20 @@ File.prototype = {
 构造好组合对象与叶对象的关系后，实例化，在组合对象中插入组合或叶对象
 
 ```javascript
-var web = new Folder("Web");
-var fe = new Folder("前端");
-var css = new Folder("CSS");
-var js = new Folder("js");
-var rd = new Folder("后端");
+var web = new FolderComponent("Web");
+var fe = new FolderComponent("前端");
+var css = new FolderComponent("CSS");
+var js = new FolderComponent("js");
+var rd = new FolderComponent("后端");
 
 web.add(fe).add(rd);
 
-var file1 = new File("HTML权威指南.pdf");
-var file2 = new File("CSS权威指南.pdf");
-var file3 = new File("JavaScript权威指南.pdf");
-var file4 = new File("MySQL基础.pdf");
-var file5 = new File("Web安全.pdf");
-var file6 = new File("Linux菜鸟.pdf");
+var file1 = new FileComponent("HTML权威指南.pdf");
+var file2 = new FileComponent("CSS权威指南.pdf");
+var file3 = new FileComponent("JavaScript权威指南.pdf");
+var file4 = new FileComponent("MySQL基础.pdf");
+var file5 = new FileComponent("Web安全.pdf");
+var file6 = new FileComponent("Linux菜鸟.pdf");
 
 css.add(file2);
 
