--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -30,6 +30,10 @@
 
 #### 单例模式
 
+> 重要程度：⭐⭐⭐⭐⭐  
+> 难度：⭐⭐  
+> 命名建议：xxxSingle，xxxSingleton，xxxUnum
+
 ##### 1 定义
 
 保证一个类仅有一个实例，并提供一个访问它的全局访问点
@@ -93,6 +97,10 @@ SingletonSetHr("hr2").getHr(); // hr1
 
 #### 策略模式
 
+> 重要程度：⭐⭐⭐  
+> 难度：⭐⭐⭐⭐  
+> 命名建议：xxxStratege、xxx（具体实现）
+
 ##### 1 定义
 
 定义一系列的算法，把它们一个个封装起来，并且使他们可以互相替换
@@ -122,7 +130,7 @@ var levelMap = {
 };
 
 // 组策略
-var scoreLevel = {
+var scoreLevelStratege = {
   basicScore: 80,
 
   S: function() {
@@ -144,7 +152,7 @@ var scoreLevel = {
 
 // 调用
 function getScore(level) {
-  return scoreLevel[level] ? scoreLevel[level]() : 0;
+  return scoreLevelStratege[level] ? scoreLevelStratege[level]() : 0;
 }
 
 console.log(getScore("S"), getScore("A"), getScore("B"), getScore("C"), getScore("D")); // 90 88 86 84 0
@@ -237,6 +245,10 @@ console.log(ret);
 ```
 
 #### 代理模式
+
+> 重要程度：⭐⭐⭐⭐  
+> 难度：⭐  
+> 命名建议：xxxProxy
 
 ##### 1 定义
 
