增加 部分内容

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -195,6 +195,20 @@ plan-c. {
 }
 ```
 
+#### 权重计算规则
+
+1. 第一等：代表内联样式，如: style=””，权值为 `1000`。
+
+2. 第二等：代表 ID 选择器，如：#content，权值为 `0100`。
+
+3. 第三等：代表类，伪类和属性选择器，如.content，权值为 `0010`。
+
+4. 第四等：代表类型选择器和伪元素选择器，如 div p，权值为 `0001`。
+
+5. 通配符、子选择器、相邻选择器等的。如\*、>、+,权值为 `0000`。
+
+6. 继承的样式没有权值。
+
 #### 浏览器渲染原理
 
 1. DOM Tree：浏览器将 `HTML` 解析成树形的数据结构。
