--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -179,6 +179,20 @@ var b = a.substring(1, 3); // error if a='abcd',b='bc',a='abcd'
 // split() 讲字符串切割成数组
 ```
 
+#### localStorage，sessionStorage 和 cookies 的区别
+
+###### sessionStorage
+
+> 用于本地存储一个会话（session）中的数据，这些数据只有在同一个会话中的页面才能访问并且当会话结束后数据也随之销毁。因此 sessionStorage 不是一种持久化的本地存储，仅仅是会话级别的存储
+
+###### localStorage
+
+> 用于持久化的本地存储，除非主动删除数据，否则数据是永远不会过期的
+
+###### cookie
+
+> 数据始终在同源的 http 请求中携带，即 cookie 在浏览器和服务器之间来回传递
+
 #### JS 设置 cookie
 
 ```javascript
