--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -55,8 +55,8 @@ new Vue{(
 
 ##### REACT
 
-- 兄弟组件：
-  > `context`（还可以很好的适用跨级传值，和 `Vue` 中的 `bus` 属性一样都应该是高作用域的参数）一个是 `Context` 生产者『 Provider 』，通常是一个父节点，另外是一个 `Context` 的消费者『 Consumer 』，通常是一个或者多个子节点。所以 `Context` 的使用基于生产者消费者模式
+- 兄弟组件：`context`（也可以很好的适用跨级传值，和 `Vue` 中的 `bus` 属性一样都应该是高作用域的参数）
+  > 两个属性：一个是 `Context` 生产者『 Provider 』，通常是一个父节点，另外是一个 `Context` 的消费者『 Consumer 』，通常是一个或者多个子节点。所以 `Context` 的使用基于生产者消费者模式
 - 父向子传值：在组件中绑定属性，子组件中 `props` 就可以获取
 - 子向父传值：通过在子组件方法中通过 `props` 获取方法名，回调的方式传值
 
