更新 开发规范

--- a/chatAbout/前端物语-开发规范.md
+++ b/chatAbout/前端物语-开发规范.md
@@ -1,6 +1,6 @@
 <div align="center">
 
-## 前端物语 - Git
+## 前端物语 - 开发规范
 
   <img src="./../resource/chatAbout_header.png" width="500" />
 
@@ -112,5 +112,409 @@ function Student(name) {
   this.setName = function(value) {
     _name = value;
   };
+}
+```
+
+---
+
+### 注释规范
+
+#### 注释原则
+
+**As short as possible**（如无必要，勿增注释）
+
+> 尽量提高代码本身的清晰性、可读性。
+
+**As long as necessary**（如有必要，尽量详尽）
+
+> 合理的注释、空行排版等，可以让代码更易阅读、更具美感。
+
+#### 单行注释
+
+必须独占一行。 `//` 后跟一个空格，缩进与下一行被注释说明的代码一致。
+
+```javascript
+// 调用了一个函数
+setTitle();
+
+var maxCount = 10; // 设置最大量
+
+// setName()
+```
+
+#### 多行注释
+
+『 多行注释 』主要面向函数、方法，其它场景尽量使用『 单行注释 』。多行注释使用须知：
+
+- 函数/方法注释必须包含函数说明，有参数和返回值时必须使用注释标识。
+- 参数和返回值注释必须包含类型信息和说明。
+- 当函数是内部函数，外部不可访问时，可以使用 `@inner` 标识。
+
+```javascript
+/**
+ * 函数描述
+ *
+ * @param {string} p1 参数1的说明
+ * @param {string} p2 参数2的说明，比较长
+ *     那就换行了.
+ * @param {number=} p3 参数3的说明（可选）
+ * @return {Object} 返回值描述
+ */
+function foo(p1, p2, p3) {
+  var p3 = p3 || 10;
+  return {
+    p1: p1,
+    p2: p2,
+    p3: p3
+  };
+}
+```
+
+常用注释关键字
+| 注释名 | 语法 | 示例 |
+| ---- | ------------------------------- | ----------------------------------------------------- |
+| @param |@param 参数名 {参数类型} 描述信息 | @param name {String} 传入名称 |
+| @return |@return {返回类型} 描述信息 | @return {Boolean} true:可执行;false:不可执行 |
+| @author |@author 作者信息 （附属信息：如邮箱、日期） | @author 张三 2015/07/21 |
+| @version |@version XX.XX.XX | @version 1.0.3 |
+
+#### 文件注释
+
+文件注释用于告诉不熟悉这段代码的读者这个文件中包含哪些东西。 应该提供文件的大体内容, 它的作者, 依赖关系和兼容性信息。如下:
+
+```javascript
+/**
+ * @fileoverview Description of file, its uses and information
+ * about its dependencies.
+ * @author user@100tal.com (Firstname Lastname)
+ * Copyright 2019 Tal Inc. All Rights Reserved.
+ */
+```
+
+### HTML 书写规范
+
+#### 语法
+
+- 在页面开头使用这个简单地 `doctype` 来启用标准模式；
+- 应在 `html` 标签上加上 [lang](http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-html-element) 属性；
+- 声明一个明确的字符编码，通常指定为`'UTF-8'`;
+- 缩进使用 soft tab（**4** 个空格）；
+- 嵌套的节点应该缩进；
+- 在属性上，使用双引号，不要使用单引号；
+- 属性名全小写，用中划线做分隔符；
+- 不要在自动闭合标签结尾处使用斜线（HTML5 规范 指出他们是可选的）；
+- 不要忽略可选的关闭标签，例：`</li>` 和 `</body>`。
+
+```html
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Page title</title>
+  </head>
+  <body>
+    <img src="images/company_logo.png" alt="Company" />
+
+    <h1 class="hello-world">Hello, world!</h1>
+  </body>
+</html>
+```
+
+#### 引入 CSS、JS
+
+> 根据 HTML5 规范, 通常在引入 CSS 和 JS 时不需要指明 `type`，因为 text/css 和 text/javascript 分别是他们的默认值。
+
+###### 引入方式
+
+- [使用 link](https://www.w3.org/TR/2011/WD-html5-20110525/semantics.html#the-link-element)
+- [使用 style](https://www.w3.org/TR/2011/WD-html5-20110525/semantics.html#the-style-element)
+- [使用 script](https://www.w3.org/TR/2011/WD-html5-20110525/scripting-1.html#the-script-element)
+
+```html
+<!-- External CSS -->
+<link rel="stylesheet" href="code_guide.css" />
+
+<!-- In-document CSS -->
+<style>
+  /* ... */
+</style>
+
+<!-- External JS -->
+<script src="code_guide.js"></script>
+
+<!-- In-document JS -->
+<script>
+  /* ... */
+</script>
+```
+
+#### 属性顺序
+
+属性应该按照特定的顺序出现以保证易读性
+
+1. class
+2. id
+3. name
+4. data-\*
+5. src, for, type, href, value , max-length, max, min, pattern
+6. placeholder, title, alt
+7. aria-\*, role
+8. required, readonly, disabled
+
+#### 其它
+
+> 在 JS 文件中生成标签让内容变得更难查找，更难编辑，性能更差。应该尽量避免这种情况的出现。
+
+> 在编写 HTML 代码时，需要尽量避免多余的父节点；很多时候，需要通过迭代和重构来使 HTML 变得更少。
+
+### CSS、SCSS 书写规范
+
+- 缩进使用 soft tab（4 个空格）
+- 每个属性声明末尾都要加分号
+- 需要空格的情况
+  - 属性值前
+  - 属性值前
+  - 选择器`>`, `+`, `~`前后
+  - `{`前
+  - !important `!`前
+  - @else 前后
+  - 属性值中的`,`后
+  - 注释`/*`后和`*/`前
+- 不需要空格的情况
+  - 属性名后
+  - 多个规则的分隔符`,`前
+  - !important `!`后
+  - 属性值中`(`后和`)`前
+  - 行末不要有多余的空格
+- 需要空行情况
+  - 文件最后保留一个空行
+  - `}`后最好跟一个空行，包括 scss 中嵌套的规则
+  - 属性之间需要适当的空行，具体见[属性声明顺序](#属性声明顺序)
+- 多个规则的分隔符`,`后需要换行
+
+###### 注释的使用
+
+- 注释统一用`/* */`（scss 中也不要用`//`），具体参照右边的写法；
+- 缩进与下一行代码保持一致；
+- 可位于一个代码行的末尾，与代码间隔一个空格。
+
+```css
+/* Modal header */
+.modal-header {
+  /* ...; */
+}
+
+/*
+ * Modal header
+ */
+.modal-header {
+  /* ...; */
+}
+
+.modal-header {
+  /* 50px */
+  width: 50px;
+
+  color: red; /* color red */
+}
+```
+
+###### 引号
+
+- 最外层统一使用双引号；
+- url 的内容要用引号；
+- 属性选择器中的属性值需要引号
+
+```css
+.element:after {
+  content: "";
+  background-image: url("logo.png");
+}
+
+li[data-type="single"] {
+  /* ... */
+}
+```
+
+###### 命名
+
+- 类名使用小写字母，以中划线分隔
+- id 采用驼峰式命名
+- scss 中的变量、函数、混合、placeholder 采用驼峰式命名
+
+```css
+/* class */
+.element-content {
+  /* ... */
+}
+
+/* id */
+#myDialog {
+  /* ... */
+}
+
+/* 变量 */
+$colorBlack: #000;
+
+/* 函数 */
+@function pxToRem($px) {
+  /* ... */
+}
+```
+
+###### 属性简写
+
+> 属性简写需要你非常清楚属性值的正确顺序，而且在大多数情况下并不需要设置属性简写中包含的所有值，所以建议尽量分开声明会更加清晰；
+
+常见的属性简写包括:
+
+- font
+- background
+- transition
+- animation
+
+```css
+/* not good */
+.element {
+  transition: opacity 1s linear 2s;
+}
+
+/* good */
+.element {
+  transition-delay: 2s;
+  transition-timing-function: linear;
+  transition-duration: 1s;
+  transition-property: opacity;
+}
+```
+
+###### 媒体查询
+
+> 尽量将媒体查询的规则靠近与他们相关的规则，不要将他们一起放到一个独立的样式文件中，或者丢在文档的最底部，这样做只会让大家以后更容易忘记他们。
+
+```css
+.element {
+  /* ... */
+}
+
+.element-avatar {
+  /* ... */
+}
+
+@media (min-width: 480px) {
+  .element {
+    /* ... */
+  }
+
+  .element-avatar {
+    /* ... */
+  }
+}
+```
+
+###### SCSS 相关
+
+- 提交的代码中不要有 `@debug`；
+- 声明顺序：
+  - `@extend`
+  - 不包含 `@content` 的 `@include`
+  - 包含 `@content` 的 `@include`
+  - 自身属性
+  - 嵌套规则
+- `@import` 引入的文件不需要开头的`_`和结尾的`.scss`；
+- 嵌套最多不能超过 **5** 层；
+- `@extend` 中使用 `placeholder` 选择器；
+- 去掉不必要的父级引用符号`&`。
+
+###### 杂项
+
+- 不允许有空的规则；
+- 元素选择器用小写字母；
+- 去掉小数点前面的 `0`；
+- 去掉数字中不必要的小数点和末尾的 `0`；
+- 属性值`0`后面不要加单位；
+- 同个属性不同前缀的写法需要在垂直方向保持对齐，具体参照右边的写法；
+- 无前缀的标准属性应该写在有前缀的属性后面；
+- 不要在同个规则里出现重复的属性，如果重复的属性是连续的则没关系；
+- 不要在一个文件里出现两个相同的规则；
+- 用 `border: 0`; 代替`border: none`;；
+- 选择器不要超过 **4** 层（在 scss 中如果超过 4 层应该考虑用嵌套的方式来写）；
+- 发布的代码中不要有 `@import`；
+- 尽量少用`*`选择器。
+
+---
+
+## 文末
+
+##### 属性声明顺序
+
+```css
+/* 常用css属性声明示例 */
+.declaration-order {
+  display: block;
+  visibility: hidden;
+  float: left;
+  clear: both;
+  over-flow: auto;
+  zoom: 1;
+
+  border-spacing: 1px;
+  list-style: none;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+
+  margin: 0 auto;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 15px;
+  width: 500px;
+  min-width: 200px;
+  max-width: 500px;
+  height: 300px;
+
+  font: italic bolder 16px/3 cursive;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: border;
+  font-style: italic;
+  line-height: 1.5em;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-decoration: underline;
+  text-indent: 2em;
+  letter-spacing: 4px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+  text-overflow: ellipsis;
+  word-break: break-all;
+
+  color: #fff;
+  background: #f0f0f0;
+  background-color: #eee;
+  background-image: url("**.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: 10px 20px;
+  background-origin: content-box;
+  background-size: 80px 60px;
+
+  outline: none;
+  opacity: 0.5;
+  box-shadow: 10px 5px 5px #ddd;
+  text-shadow: 1px 1px 2px #333;
+
+  transition: all 3s ease-out 1s;
+  transform: scale(2, 0.5);
+  animation: 3s linear 1s slidein;
+
+  content: "";
+  cursor: pointer;
 }
 ```
