--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -348,7 +348,7 @@ const d = 4;
 const ret = { ...foo, ...bar, d }; // { a:1, b:3, c:2, d:4 }
 ```
 
-#### JS 部分简写 :checkered_flag: 逼格拔高
+#### JS 部分简写『 逼格拔高 』:checkered_flag:
 
 ```javascript
 // 取整
