更新 开发规范

--- a/chatAbout/前端物语-开发规范.md
+++ b/chatAbout/前端物语-开发规范.md
@@ -8,6 +8,16 @@
 
 ---
 
+使用者重点放在 `空格` 、 `缩进`、 `换行` 等可格式化 **之外** 的地方，把这些不重要的东西交给 IDE 处理。
+
+## 简介
+
+- [命名规范](#命名规范)
+- [注释规范](#注释规范)
+- [HTML 书写规范](#html-书写规范)
+- [CSS 和 SCSS 书写规范](#css-和-scss-书写规范)
+- [JavaScript 书写规范](#javascript-书写规范)
+
 ### 命名规范
 
 #### 驼峰式命名法介绍
@@ -55,7 +65,7 @@
   }
   ```
 
-- `boolean` 类型的变量使用 `is` 或 `has` 开头，或者使用 `status` 、 `active`关键字
+* `boolean` 类型的变量使用 `is` 或 `has` 开头，或者使用 `status` 、 `active`关键字
 
   ```javascript
   var isReady = false;
@@ -63,11 +73,19 @@
   var active = true;
   ```
 
-- `Promise` 对象用动宾短语的进行时表达
+* `Promise` 对象用动宾短语的进行时表达
+
   ```javascript
   var loadingData = ajax.get("url");
   loadingData.then(callback);
   ```
+
+* 其它专业名词变量
+
+  - `ID`在变量名中全大写
+  - `URL`在变量名中全大写
+  - `Android`在变量名中大写第一个字母
+  - `iOS`在变量名中小写第一个，大写后两个字母
 
 #### 函数命名
 
@@ -171,12 +189,13 @@ function foo(p1, p2, p3) {
 ```
 
 常用注释关键字
-| 注释名 | 语法 | 示例 |
-| ---- | ------------------------------- | ----------------------------------------------------- |
-| @param |@param 参数名 {参数类型} 描述信息 | @param name {String} 传入名称 |
-| @return |@return {返回类型} 描述信息 | @return {Boolean} true:可执行;false:不可执行 |
-| @author |@author 作者信息 （附属信息：如邮箱、日期） | @author 张三 2015/07/21 |
-| @version |@version XX.XX.XX | @version 1.0.3 |
+
+| 注释名     | 语法                                          | 示例                                           |
+| ---------- | --------------------------------------------- | ---------------------------------------------- |
+| `@param`   | `@param` 参数名 {参数类型} 描述信息           | `@param` name {String} 传入名称                |
+| `@return`  | `@return` {返回类型} 描述信息                 | `@return` {Boolean} true:可执行;false:不可执行 |
+| `@author`  | `@author` 作者信息 （附属信息：如邮箱、日期） | `@author` 张三 2015/07/21                      |
+| `@version` | `@version` xx.xx.xx                           | `@version` 1.0.3                               |
 
 #### 文件注释
 
@@ -267,7 +286,7 @@ function foo(p1, p2, p3) {
 
 > 在编写 HTML 代码时，需要尽量避免多余的父节点；很多时候，需要通过迭代和重构来使 HTML 变得更少。
 
-### CSS、SCSS 书写规范
+### CSS 和 SCSS 书写规范
 
 - 缩进使用 soft tab（4 个空格）
 - 每个属性声明末尾都要加分号
@@ -426,7 +445,7 @@ $colorBlack: #000;
 - `@extend` 中使用 `placeholder` 选择器；
 - 去掉不必要的父级引用符号`&`。
 
-###### 杂项
+###### 其它
 
 - 不允许有空的规则；
 - 元素选择器用小写字母；
@@ -441,6 +460,126 @@ $colorBlack: #000;
 - 选择器不要超过 **4** 层（在 scss 中如果超过 4 层应该考虑用嵌套的方式来写）；
 - 发布的代码中不要有 `@import`；
 - 尽量少用`*`选择器。
+
+### JavaScript 书写规范
+
+- 缩进使用 `soft tab`（4 个空格）
+- 单行长度不要超过 **80**，但如果编辑器开启 `word wrap` 可以不考虑单行长度
+- 需加分号的几种情况
+  - 变量声明
+  - 表达式
+  - return
+  - throw
+  - break
+  - continue
+  - do-while
+- 需加空格的几种情况
+  - 二元运算符前后
+  - 三元运算符`?:`前后
+  - 代码块`{`前
+  - 下列关键字前：`else`, `while`, `catch`, `finally`
+  - 下列关键字后：`if`, `else`, `for`, `while`, `do`, `switch`, `case`, `try`, `catch`, `finally`, `with`, `return`, `typeof`
+  - 单行注释`//`后（若单行注释和代码同行，则`//`前也需要），多行注释`*`后
+  - 对象的属性值前
+  - for 循环，分号后留有一个空格，前置条件如果有多个，逗号后留一个空格
+  - 无论是函数声明还是函数表达式，`{`前一定要有空格
+  - 函数的参数之间
+- 不需加空格的几种情况
+  - 对象的属性名后
+  - 前缀一元运算符后
+  - 后缀一元运算符前
+  - 函数调用括号前
+  - 无论是函数声明还是函数表达式，`(`前不要空格
+  - 数组的`[`后和`]`前
+  - 对象的`{`后和`}`前
+  - 运算符`(`后和`)`前
+- 需加空行的几种情况
+  - 变量声明后（当变量声明在代码块的最后一行时，则无需空行）
+  - 注释前（当注释在代码块的第一行时，则无需空行）
+  - 代码块后（在函数调用、数组、对象中则无需空行）
+  - 文件最后保留一个空行
+- 需要换行的几种情况
+  - 代码块`{`后和`}`前
+  - 变量赋值后
+- 不需要换行的几种情况
+  - 下列关键字后：`else`, `catch`, `finally`
+  - 代码块`{`前
+- 最外层统一使用单引号
+
+###### 变量声明
+
+> 一个函数作用域中所有的变量声明尽量提到函数首部，用一个 `var` 声明，不允许出现两个连续的 `var` 声明。
+
+```javascript
+function doSomethingWithItems(items) {
+  // use one var
+  var value = 10,
+    result = value + 10,
+    i,
+    len;
+
+  for (i = 0, len = items.length; i < len; i++) {
+    result += 10;
+  }
+}
+```
+
+###### 函数
+
+- 无论是函数声明还是函数表达式，`(`前不要空格，但`{`前一定要有空格；
+- 函数调用括号前不需要空格；
+- 立即执行函数外必须包一层括号；
+- 不要给 `inline function` 命名；
+- 参数之间用`,`分隔，注意逗号后有一个空格。
+
+###### 数组、对象
+
+- 对象属性名不需要加引号；
+- 对象以缩进的形式书写，不要写在一行；
+- 数组、对象最后不要有逗号。
+
+###### 数组、对象
+
+下列关键字后必须有大括号（即使代码块的内容只有一行）:
+
+`if`, `else`, `for`, `while`, `do`, `switch`, `try`, `catch`, `finally`, `with`
+
+###### NULL
+
+- 适用场景：
+
+  - 初始化一个将来可能被赋值为对象的变量
+  - 与已经初始化的变量做比较
+  - 作为一个参数为对象的函数的调用传参
+  - 作为一个返回对象的函数的返回值
+
+- 不适用场景：
+
+  - 不要用 `null` 来判断函数调用时有无传参
+  - 不要与未初始化的变量做比较
+
+###### undefined
+
+- 永远不要直接使用 `undefined` 进行变量判断；
+- 使用 `typeof` 和字符串`undefined`对变量进行判断。
+
+###### 其它
+
+- 用`===`, `!==`代替`==`, `!=`；
+- `for-in` 里一定要有 `hasOwnProperty` 的判断；
+- 不要在内置对象的原型上添加方法，如 `Array`, `Date`；
+- 不要在内层作用域的代码里声明了变量，之后却访问到了外层作用域的同名变量；
+- 变量不要先使用后声明；
+- 不要在一句代码中单单使用构造函数，记得将其赋值给某个变量；
+- 不要在同个作用域下声明同名变量；
+- 不要在一些不需要的地方加括号，例：`delete(a.b)`；
+- 不要使用未声明的变量（全局变量需要加到.jshintrc 文件的 `globals` 属性里面）；
+- 不要声明了变量却不使用；
+- 不要在应该做比较的地方做赋值；
+- `debugger` 不要出现在提交的代码里；
+- 数组中不要存在空元素；
+- 不要在循环内部声明函数；
+- 不要像这样使用构造函数，例：`new function () { ... }`, `new Object`；
 
 ---
 
