更新 前端物语 - 组件设计

--- a/chatAbout/前端物语-组件设计.md
+++ b/chatAbout/前端物语-组件设计.md
@@ -14,20 +14,162 @@
 
 #### 一、层次结构和 UML 类图
 
+应用内的组件共同形成组件树，而在设计过程中将组件树可视化展示可以帮住全面了解应用程序的布局。一个比较好的展示办法就是组件图。
+
+UML 中有个在 OOP 类设计中经常使用的类型，成为 UML 类图。类图中显示了解属性、方法、访问修饰符、类与其他类的关系等。虽然 OOP 类设计和前端组件设计差异很大，但通过图解辅助设计的方法值得参考。对于前端组件，该图表可以显示：
+
+- State
+- Props
+- Methods
+- 与其它组件的关系
+
+这样会带来的一个比较问题是它会需要你在开始 coding 之前就需要考虑到具体细节的实现。例如每个组件需要什么类型的数据，需要实现哪些方法，所需的状态属性等等。
+
 #### 二、扁平化、面向数据的 state/props
+
+在 `state` 和 `props` 频繁被 `watch` 和 `update` 的情况下，如果有使用嵌套数据，那么性能可能会受到影响，尤其是在一下场景中。例如一些因为浅赋值而触发的重新渲染，比如 React 中你必须创建状态的副本而不是像在 Vue 中那样直接更改它们，并且使用嵌套数据这样做可能会创建笨拙、丑陋的代码。
+
+```javascript
+const state = {
+  clients: {
+    allClients,
+    firstClient,
+    lastClient: {
+      name: "John",
+      phone: "Doe",
+      address: {
+        number: 5,
+        street: "Estin",
+        suburb: "Parrama",
+        city: "Sydney"
+      }
+    }
+  }
+};
+
+// 倘若我们需要修改 address.number 时需要怎么办
+const test = {
+  clients: {
+    ...state.clients,
+    lastClient: {
+      ...state.clients.lastClient,
+      address: {
+        ...state.clients.lastClient.address,
+        number: 10
+      }
+    }
+  }
+};
+```
+
+即使使用展开运算符，这种写法也并不优雅。如果你传给组件一个对象但是你并不能清楚的知道对象内部的属性值，所以找出实际需要的数据值是来自组件具体的属性值的额外工作。但如果 `props` 足够扁平化，那么起码会方便使用和维护。
+
+```javascript
+
+// 我们无法得知 customer 这个对象里面拥有什么属性
+// 这个组件需要使用这个对象所有的属性值或者只是需要其中的一部分？
+// 如果我想要将这个组件在别处使用，我应该传入什么样的对象
+
+<listItem customer={customer}/>
+
+// 下面的这个组件接收的属性就一目了然
+
+<listItem phone={customer.phone} name={customer.name} iNumber={customer.iNumber}  />
+```
+
+`state` / `props` 还应该只包含组件渲染所需的数据。此外，对于数据繁重的应用程序，数据规范化可以带来巨大的好处。除了扁平化之外，你可能还需要考虑一些别的优化方法。
 
 #### 三、更加纯粹的 State 变化
 
+对 `state` 的更改通常应该响应某种事件。例如用户单击按钮或 API 的响应。此外它们不应该因为别的 `state` 的变化而做出响应，因为 `state` 之间这种关联可能会导致难以理解和维护的组件行为。**state 变化应该没有副作用。**
+
 #### 四、低耦合
+
+组件的核心思想是可复用性，因此要求它们必须具有『 功能性 』和『 完整性 』。`耦合`是指实体彼此依赖的术语。就前端组件而言，偶合的主要部分是组件功能依赖于其父级和它传递的 `props` 的多少，以及内部使用的子组件。我们来看一个简单的 React 示例：
+
+```javascript
+const Links = () => (
+  <div className="links-container">
+    <div class="links-list">
+      <a href="/">Home</a>
+      <a href="/shop">Products</a>
+      <a href="/help">Help</a>
+    </div>
+    <div className="links-logo">
+      <img src="/default/logo.png" />
+    </div>
+  </div>
+);
+```
+
+虽然这样会满足预期的需求，但代码却很难复用。如果链接更改需要怎么办？必须重新复制一份相同代码，并且手动去替换链接地址。而且， 如果要去实现一个用户可以更改连接的功能，那么意味着不可能将代码写‘死’，也不能期望用户去手动修改代码，那么让我们来看一下复用性更高的组件应该如何设计：
+
+```javascript
+const DEFAULT_LINKS = [
+  { route: "/", text: "Home" },
+  { route: "/shop", text: "Products" },
+  { route: "/help", text: "Help" }
+];
+const DEFAULT_LOGO = "/default/logo.png";
+
+const Links = ({ links = DEFAULT_LINKS, logoPath = DEFAULT_LOGO }) => (
+  <div className="links-container">
+    <div class="links-list">
+      // 将数组依次渲染为超链接
+      {links.map(link => (
+        <a href={link.route}> {link.text}</a>
+      ))}
+    </div>
+    <div className="links-logo">
+      <img src={logoPath} />
+    </div>
+  </div>
+);
+```
+
+在这里我们可以看到，虽然它的原始链接和 logo 具有默认值，但我们可以通过 props 传入的值去覆盖掉默认值。同时我们还能更方便实现对组件的复用，而不是受限于特定的上下文环境。
+
+```javascript
+import Links from './Link.js';
+
+const adminLinks = {
+  links: [
+    {route: "/", text: "Home"},
+    {route: "/metrics", text: "Site metrics"},
+    {route: "/admin", text: "Admin panel"}
+  ],
+  logoPath: "/admin/logo.png"
+}
+<Links {...adminLinks} />
+```
 
 #### 五、辅助代码分离
 
+在长时间与代码相处的过程中，即使改变一个很小的习惯也可以产生很大的影响。其中一个有效的原则就是将辅助代码分离出放在特定的地方，这样你在处理组件时就不必考虑这些。列举一些方面：
+
+- 配置代码
+- mock 的数据
+- 大量的非技术的说明文档
+
+因为在尝试处理组件的处理组件的核心代码时，不希望看到与技术无关。在处理组件时，希望它们尽可能通用且重用。查看与组件当前上下文相关的特定信息可能会使得设计出来的组件不易与具体业务解耦。
+
 #### 六、提炼精华
+
+开发组件的一个好方法是使它们包含渲染它们所需的最小 Javascript。一些无关紧要的东西，比如数据获取，数据整理或事件处理逻辑，理想情况下应该将通用的部分移入外部 `js` 或或者放在共同的组件中。
 
 #### 七、及时模块化
 
+在决定是否将代码分开时，无论是 Javascript 逻辑还是抽离为新的组件，都需要考虑以下几点。
+
+- 是否有足够的页面结构/逻辑来保证它
+- 代码重复（或可能重复）
+- 它会不会减少需要书写的模板
+- 它会不会减少需要书写的模板
+- 它会不会减少需要书写的模板吗
+- 这些好处是否超过了成本
+
 #### 八、集中/统一的状态管理
 
----
+许多大型应用程序使用 Redux 或 Vuex 等状态管理工具。这意味着他们从 `store` 获得 `props` 而不是通过父级传递。在考虑组件的可重用性时，不仅要考虑直接的父级中传递而来的 `props`，还要考虑从 `store` 中获取到的 `props`。如果在另一个项目中使用该组件，则需要在 `store` 中使用这些值。或许其他项目根本不使用集中存储工具，必须将其转换为从父级中进行 `props` 传递的形式。
 
 附： [API 的设计原则](https://github.com/dt-fe/weekly/blob/v2/023.%E7%B2%BE%E8%AF%BB%E3%80%8AAPI%E8%AE%BE%E8%AE%A1%E5%8E%9F%E5%88%99%E3%80%8B.md)
