增加 关于 HTTPS 的安全性

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -60,6 +60,26 @@ Accept-Language # 接收语言
 cookie # 发送请求时会把同域名下的 cookie 发送过去
 ```
 
+#### 关于 HTTPS 的安全性
+
+Q: HTTPS 为什么安全？
+
+> `HTTPS` 通过对称加密和非对称加密和 hash 算法共同作用，在性能和安全性上达到了一个平衡。使得传输过程中不被监听、数据不会被窃取，保证网站的真实性。
+
+Q: HTTPS 的传输过程是怎样的？
+
+> 客户端发起 `HTTPS` 请求，服务端返回 `CA` 数字证书，客户端对证书进行验证，验证通过后本地生成用于改造对称加密算法的随机数，通过证书中的公钥对随机数进行加密传输到服务端，服务端接收后通过私钥解密得到随机数，之后的数据交互通过对称加密算法进行加解密。
+
+Q: 为什么需要 CA 数字证书？
+
+> 1、身份授权。确保浏览器访问的网站是经过 `CA` 验证的可信任的网站。
+> 2、分发公钥。每个数字证书都包含了注册者生成的公钥（验证确保是合法的，非伪造的公钥）。在 `SSL` 握手时会通过 `certificate` 消息传输给客户端。
+> 3、验证证书合法性。客户端接收到数字证书后，会对证书合法性进行验证。只有验证通过后的证书，才能够进行后续通信过程。
+
+Q: 使用 HTTPS 会被抓包吗？
+
+> 会被抓包，`HTTPS` 只防止用户在不知情的情况下通信被监听，如果用户主动授信，代理软件是可以对传输内容进行解密的。
+
 #### 第一方 cookie 和第三方 cookie
 
 ##### 第一方 Cookie 的优势和应用：
