更新 Map VS Subject

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -70,6 +70,42 @@ m.get(["a"]); // undefined。表面键相同但是内存地址不一样
 > 实例属性和方法：**size**、**set**、**get**、**has**、**delete**、**clear**  
 > 遍历方法：`keys()`、`values()`、`entries()`、`forEach()`
 
+##### Map VS Subject
+
+|          | Map                                   | Object                                                                 |
+| -------- | ------------------------------------- | ---------------------------------------------------------------------- |
+| 默认值   | 默认不包含任何值，只包含显式插入的键  | 一个 `Object` 有一个原型，原型上的键名有可能和自己对象上设置的键名冲突 |
+| 键名类型 | `Any`                                 | `String` 或 `Symbol`                                                   |
+| 迭代器   | `forEach` 或者 `for...of...`          | 不可直接迭代                                                           |
+| 长度     | 键值对个数通过 `size` 属性获取 `O(1)` | 键值对个数只能手动计算 `O(n)`                                          |
+| 性能     | 频繁增删键值对的场景下表现更好        | 频繁添加和删除键值对的场景下未作出优化                                 |
+
+###### Object/Map 何为最佳实践
+
+- 『 Map 』始终保持按插入顺序返回键名。但『 Object 』却不是。从 `ES6` `开始，String` 和 `Symbol` 键是按顺序保存起来的，但是通过隐式转换保存成 `String` 的键就是乱序的，当插入顺序是你解决问题时需要考虑的，那么 『 Map 』 就是个最佳解决方案
+- 并且当前需要使用除 `String` 和 `Symbol` 以外的键名时，比如正则表达式，选择『 Map 』 作为解决方案。
+
+- 如果需要遍历键值对（并且需要考虑顺序）,优先考虑 『 Map 』。`Map` 是一个纯哈希结构，而 `Object` 不是（它拥有自己的内部逻辑）。`Map` 在频繁增删键值对的场景下表现更好，性能更高。因此当你需要频繁操作数据的时候也可以优先考虑 『 Map 』
+
+- 再举一个实际的例子，比如有一个自定义字段的用户操作功能，用户可以通过表单自定义字段，那么这时候最好是使用 Map，因为很有可能会破坏原有的对象。
+
+  ```javascript
+  // 此时用户自定义的 toString 就会破坏到原有的对象而 Map 键名接受任何类型，没有影响
+  const userCustomFields = {
+    color: "blue",
+    size: "medium",
+    toString: "A blue box"
+  };
+  ```
+
+- 当你需要处理一些属性，那么 『 Object 』 是完全受用的，尤其是需要处理 `JSON` 数据的时候。由于 『 Map 』 可以是任意类型，因此没有可以将其转化为 `JSON` 的原生方法。
+
+  ```javascript
+  var map = new Map();
+  map.set("key", "value");
+  JSON.stringify(map); // "{}"
+  ```
+
 #### 同源策略
 
 ```
