增加 手写 new、instanceOf

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -21,7 +21,7 @@ function creatPerson(name, age, job) {
   o.name = name;
   o.age = age;
   o.job = job;
-  o.sayName = function() {
+  o.sayName = function () {
     console.log(this.name);
   };
   return o;
@@ -39,7 +39,7 @@ console.log(tianjiao);
 function Person(name, age) {
   this.name = name;
   this.age = age;
-  this.sayName = function() {
+  this.sayName = function () {
     console.log(this.name);
   };
 }
@@ -56,7 +56,7 @@ console.log(tj2);
 function Person() {}
 Person.prototype.name = "tj3";
 Person.prototype.age = 24;
-Person.prototype.sayName = function() {
+Person.prototype.sayName = function () {
   alert(this.name);
 };
 var tj3 = new Person();
@@ -97,7 +97,7 @@ alert(bindFun(10, 10)); //20
 ##### 手写 call
 
 ```javascript
-Funtion.prototype.mycall = function(context, ...args) {
+Funtion.prototype.mycall = function (context, ...args) {
   const cxt = context ? Object(context) : window; // 返回 this 参数或者 window,this 参数可能为基本数据类型，通过 Object 转换一下
   cxt.fn = this;
   let res = cxt.fn(...args);
@@ -109,7 +109,7 @@ Funtion.prototype.mycall = function(context, ...args) {
 ##### 手写 apply
 
 ```javascript
-Function.prototype.myapply = function(context, arr) {
+Function.prototype.myapply = function (context, arr) {
   const cxt = context ? Object(context) : window;
   cxt.fn = this;
   let res;
@@ -123,7 +123,7 @@ Function.prototype.myapply = function(context, arr) {
 ##### 手写 bind
 
 ```javascript
-Function.prototype.mybind = function(ctx, ...args) {
+Function.prototype.mybind = function (ctx, ...args) {
   // return (...a)=> this.call(ctx, ...args, ...a);
   return (...a) => this.apply(ctx, [...args, ...a]);
 };
@@ -143,6 +143,60 @@ testW.mycall(w, "nihao", "wgc");
 testW.myapply(w, ["NIHAO", "WGC"]);
 ```
 
+##### 手写 new
+
+```javascript
+const myNew = function () {
+  let Constructor = Array.prototype.shift.call(arguments); // Constructor 就是 new 时传入的第一个参数，剩余的 arguments 是其他的参数
+  let obj = {};
+  obj.__proto__ = Constructor.prototype; // 使用obj.__proto__ = Constructor.prototype 继承原型上的方法
+  let res = Constructor.apply(obj, arguments); // 将剩余的 arguments 传给 Contructor ，绑定 this 指向为 obj，并执行
+  return res instanceof Object ? res : obj; // 如果构造函数返回的是引用类型，直接返回该引用类型，否则返回 obj
+};
+
+// 测试
+function Person(name, age) {
+  this.name = name;
+  this.age = age;
+  this.sayName = function () {
+    console.log(this.name);
+  };
+}
+
+const newFun = new Person("WGC", 23);
+const myNewFun = myNew(Person, "WGC", 23);
+
+console.log("newFun:", newFun);
+console.log("myNewFun:", myNewFun);
+```
+
+##### 手写 instanceOf
+
+```javascript
+const myInstanceof = function (left, right) {
+  right = [undefined, null].includes(left) ? Object : right.prototype;
+  left = [undefined, null].includes(right) ? Object : right.__proto__;
+  // 在 left 的原型链中层层查找，是否有原型等于 prototype
+  while (true) {
+    // 确定边界条件，如果 left === null，即找到头没找到返回 false，right === left，即找到返回 true
+    if (left === null) {
+      return false;
+    }
+    if (right === left) {
+      return true;
+    }
+    // 不停的向上查找
+    left = left.__proto__;
+  }
+};
+
+// 测试
+console.log(myInstanceof([], Object));
+console.log(myInstanceof(1, Number));
+console.log(myInstanceof("wgc", String));
+console.log(myInstanceof(undefined, Boolean));
+```
+
 #### 函数防抖、函数节流
 
 - 函数防抖：(任务触发的间隔超过指定间隔的时候，任务才会执行)
@@ -152,7 +206,7 @@ testW.myapply(w, ["NIHAO", "WGC"]);
   ```javascript
   function debounce(fn, wait = 500) {
     let timer = null;
-    return function() {
+    return function () {
       clearTimeout(timer);
       timer = setTimeout(() => {
         fn.apply(this, arguments);
@@ -167,7 +221,7 @@ testW.myapply(w, ["NIHAO", "WGC"]);
   ```javascript
   function throttle(fn, wait = 500) {
     var timerStatus = true;
-    return function() {
+    return function () {
       if (!timerStatus) return;
       timerStatus = false;
       setTimeout(() => {
@@ -197,7 +251,7 @@ let deepTraversal1 = (node, nodeList = []) => {
 
 ```javascript
 // 方案二
-let deepTraversal2 = node => {
+let deepTraversal2 = (node) => {
   let nodes = [];
   if (node !== null) {
     nodes.push(node);
@@ -213,7 +267,7 @@ let deepTraversal2 = node => {
 
 ```javascript
 // 方案三。非递归
-let deepTraversal3 = node => {
+let deepTraversal3 = (node) => {
   let stack = [];
   let nodes = [];
   if (node) {
@@ -240,7 +294,7 @@ let deepTraversal3 = node => {
 #### 广度遍历
 
 ```javascript
-let widthTraversal = node => {
+let widthTraversal = (node) => {
   let nodes = [];
   let stack = [];
   if (node) {
@@ -283,15 +337,15 @@ setTimeout(() => {
 
 ```javascript
 ajax("XXX1")
-  .then(res => {
+  .then((res) => {
     // 操作逻辑
     return ajax("XXX2");
   })
-  .then(res => {
+  .then((res) => {
     // 操作逻辑
     return ajax("XXX3");
   })
-  .then(res => {
+  .then((res) => {
     // 操作逻辑
   });
 ```
@@ -357,18 +411,18 @@ let p2 = test(8);
 let p3 = Promise.reject("执行结束");
 
 Promise.all([p1, p2])
-  .then(result => {
+  .then((result) => {
     console.log(result);
   })
-  .catch(error => {
+  .catch((error) => {
     console.error(error); // 执行失败8大于5
   });
 
 Promise.race([p1, p3, p2])
-  .then(result => {
+  .then((result) => {
     console.log(result);
   })
-  .catch(error => {
+  .catch((error) => {
     console.error(error); // 执行结束
   });
 ```
@@ -378,25 +432,25 @@ Promise.race([p1, p3, p2])
 > `Promse.race` 就是赛跑的意思，意思就是说，`Promise.race([p1, p2, p3])`里面哪个结果获得的快，就返回那个结果，不管结果本身是成功状态还是失败状态。
 
 ```javascript
-Promise._all = list =>
+Promise._all = (list) =>
   new Promise((resolve, reject) => {
     let resP = [];
     let count = 0;
     list.forEach((index, pro) => {
       resolve(pro).then(
-        res => {
+        (res) => {
           count++;
           resP[index] = res;
           if (count === list.length) resove(resP);
         },
-        err => {
+        (err) => {
           reject(err);
         }
       );
     });
   });
 Promise._race = list = new Promise((resolve, reject) => {
-  list.forEach(pro => {
+  list.forEach((pro) => {
     pro.then(resove, reject);
   });
 });
