feat: 前端基础增加浮点数误差

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -104,7 +104,7 @@ var btnAdd = document.getElementById("btnAdd");
 // 第三个参数默认为false,表示冒泡模型即是多个触发事件的时候执行顺序是从里层开始执行到外层;true，表示捕抓模型
 btnAdd.addEventListener(
   "click",
-  function() {
+  function () {
     // ...
   },
   false
@@ -115,7 +115,7 @@ btnAdd.addEventListener(
 
 ```javascript
 for (var i = 0; i <= oBtn.length; i++) {
-  oBtn[i].onclick = function() {
+  oBtn[i].onclick = function () {
     console.log(i);
   };
 }
@@ -148,7 +148,7 @@ for (var i = 0; i <= oBtn.length; i++) {
 
 ```javascript
 for (let i = 0; i <= oBtn.length; i++) {
-  oBtn[i].onclick = function() {
+  oBtn[i].onclick = function () {
     console.log(i);
   };
 }
@@ -159,6 +159,15 @@ for (let i = 0; i <= oBtn.length; i++) {
 #### 时间戳 getTime()
 
 返回的就是格林威治时间 1970 年 1 月 1 日 0 点 0 分 0 秒 0 毫秒到现在的毫秒数
+
+#### 浮点数的误差
+
+```javascript
+// 二进制浮点数的误差造成结果为 false
+0.3 - 0.2 === 0.1; // false
+// 精度可接受内的误差 true
+0.3 - 0.2 - 0.1 <= Number.EPSILON; // true
+```
 
 #### 截取字符串 slice/splice/substr/substring(n,m)
 
@@ -205,7 +214,8 @@ function SetCookie(name, value) {
   var Days = 30 * 12; // cookie 将被保存一年
   var exp = new Date(); // 获得当前时间
   exp.setTime(exp.getTime() + Days * 24 * 60 * 60 * 1000); // 换成毫秒
-  document.cookie = name + "=" + escape(value) + ";expires=" + exp.toGMTString();
+  document.cookie =
+    name + "=" + escape(value) + ";expires=" + exp.toGMTString();
 }
 /**
  * 获取cookies函数
@@ -227,7 +237,8 @@ function delCookie(name) {
   var exp = new Date(); //当前时间
   exp.setTime(exp.getTime() - 1);
   var cval = getCookie(name);
-  if (cval != null) document.cookie = name + "=" + cval + ";expires=" + exp.toGMTString();
+  if (cval != null)
+    document.cookie = name + "=" + cval + ";expires=" + exp.toGMTString();
 }
 ```
 
