--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -197,6 +197,40 @@ console.log(myInstanceof("wgc", String));
 console.log(myInstanceof(undefined, Boolean));
 ```
 
+#### 手写函数柯里化
+
+```javascript
+// 柯里化实现多参累加
+add(1)(3, 4)(3, 5); // 16
+add(2)(2)(3, 5); // 12
+function add() {
+  // 1 把所有参数转换成数组
+  let args = Array.prototype.slice.call(arguments);
+  // 2 再次调用add函数，传递合并当前与之前的参数
+  let fn = function () {
+    let arg_fn = Array.prototype.slice.call(arguments);
+    return add.apply(null, args.concat(arg_fn));
+  };
+  // 3 最后一次执行会默认调用，并返回合并的值
+  fn.toString = function () {
+    return args.reduce(function (a, b) {
+      return a + b;
+    });
+  };
+  return fn;
+}
+
+// ES6写法
+function add() {
+  let args = [...arguments];
+  let fn = function () {
+    return add.apply(null, args.concat([...arguments]));
+  };
+  fn.toString = () => args.reduce((a, b) => a + b);
+  return fn;
+}
+```
+
 #### 函数防抖、函数节流
 
 - 函数防抖：(任务触发的间隔超过指定间隔的时候，任务才会执行)
