feat: 增加关于 sort 排序

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -242,6 +242,60 @@ function delCookie(name) {
 }
 ```
 
+#### 关于 sort 排序
+
+###### 不传参数(将不会按照数值大小排序，按照字符编码的顺序进行排序；)
+
+```javascript
+["General", "Tom", "Bob", "John", "Army"].sort(); // ["Army", "Bob", "General", "John", "Tom"]
+
+[-10, -20, 30, 10, 111, 35, 1899, 50, 45].sort(); // [-10, -20, 10, 111, 1899, 30, 35, 45, 50]
+```
+
+###### 传入参数(实现自定义升序，降序)
+
+```javascript
+[-10, -20, 30, 10, 111, 35, 1899, 50, 45].sort((a, b) => a - b); //  [-20, -10, 10, 30, 35, 45, 50, 111, 1899]
+
+[{ id: 10 }, { id: 5 }, { id: 6 }, { id: 9 }, { id: 2 }, { id: 3 }].sort(
+  (a, b) => a.id - b.id
+); //	[{id: 2}, {id: 3}, {id: 5}, {id: 6}, {id: 9}, {id: 10}]
+
+["武汉", "告诉", "但是", "放开", "安卓", "测试"].sort((a, b) =>
+  a.localeCompare(b)
+); // ["安卓", "测试", "但是", "放开", "告诉", "武汉"]
+```
+
+###### 中英文混合
+
+```javascript
+const chineseAndEngAndNumber = [
+  "应用",
+  "zoo",
+  "服务器",
+  "banana",
+  "pear",
+  "start",
+  "张三",
+  "蓝天",
+  "随便什么吧"
+];
+chineseAndEngAndNumber.sort((x, y) => {
+  let reg = /[a-zA-Z0-9]/;
+  if (reg.test(x) || reg.test(y)) {
+    if (x > y) {
+      return 1;
+    } else if (x < y) {
+      return -1;
+    } else {
+      return 0;
+    }
+  } else {
+    return x.localeCompare(y);
+  }
+}); // ["banana", "pear", "start", "zoo", "服务器", "蓝天", "随便什么吧", "应用", "张三"]
+```
+
 #### 简述面向对象
 
 > 万物皆对象，把一个对象抽象成类,具体上就是把一个对象的静态特征和动态特征抽象成属性和方法,也就是把一类事物的算法和数据结构封装在一个类之中,程序就是多个对象和互相之间的通信组成的. 面向对象具有封装性,继承性,多态性。  
